# horse-racing-model

./: README.md  main.py  odds.py  pyproject.toml  test.py
data/: 20260201_ST_8.xlsx  home_page.xlsx  standard_time.csv
data/20260201_11/: 丞匡掠影.csv  凌登.csv  友贏威馳.csv  同心同樂.csv  大眾福星.csv  富國兄弟.csv  新力好.csv  泰力.csv  熒光.csv  綠野飛馳.csv  韋金主.csv  飛躍星伴.csv  駿跑得.csv  鬥志波.csv
data/20260204/1/: 你知我得.csv  傳承效應.csv  八里旺.csv  包裝天王.csv  好精神.csv  寶成智好.csv  彩虹七色.csv  明月清風.csv  棒棒糖.csv  鄉村樂韻.csv  電玩精英.csv  駿馬之寶.csv
data/20260204/2/: 五福星.csv  南莊堡.csv  問鼎巔峰.csv  天下寵兒.csv  決一劍.csv  維港激流.csv  良駒好友.csv  英駿威楓.csv  踏雪尋梅.csv  閃電星福.csv  順成之星.csv  駿美一生.csv
data/20260204/3/: 喜蓮勇感.csv  大浪圖田.csv  太陽勇士.csv  新意馬.csv  智取神駒.csv  鈦易搵.csv  銀亮奔騰.csv  非惟僥倖.csv
data/20260204/4/: 先到先得.csv  凝妙星.csv  君智盛.csv  客家之光.csv  寶賢得得.csv  榮耀盛甲.csv  歡樂老撾.csv  步風雷.csv  獎星.csv  竣誠駒.csv  競駿良駒.csv  蜜蜜送.csv
data/20260204/5/: 加州活力.csv  哥倫布.csv  唯美主義.csv  彩虹戰士.csv  得意佳作.csv  本領非凡.csv  翠兒威威.csv  都靈勇士.csv  隨緣得勝.csv  頌星.csv  飈誌.csv  鬆啲.csv
data/20260204/6/: 偵探傳奇.csv  勝萬金.csv  天天耍樂.csv  好好戀愛.csv  燭光晚餐.csv  狀元及第.csv  精彩福星.csv  紅逸舍.csv  連連幸運.csv  長勝隊長.csv  電子好好.csv
data/20260204/7/: 傑出漢子.csv  八駿福昇.csv  加州本事.csv  友愛心得.csv  團長好.csv  安康萬里.csv  安泰.csv  沙井之友.csv  臻至辰.csv  超勝無敵.csv  輕功猛男.csv  電源之駒.csv
data/20260204/8/: 勇敢巨星.csv  喜至寶.csv  小霸王.csv  年少多好.csv  水晶酒杯.csv  競駿輝煌.csv  (+5 more)
live_odds/: 4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
output/overnight_odds/: overnight_1.csv  overnight_10.csv  overnight_2.csv  overnight_3.csv  overnight_4.csv  overnight_5.csv  overnight_6.csv  overnight_7.csv  overnight_8.csv  overnight_9.csv
(+2120 files in other folders)
