[project]
name = "horseraceformula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pymupdf>=1.26.7",
    "python-telegram-bot>=22.7",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "selenium>=4.41.0",
    "tabulate>=0.9.0",
    "webdriver-manager>=4.0.2",
]
